# Ota-Workspace

./: .gitignore  0-1_tweet_sampling_all.sh  0-2_sample_ja2json_all.sh  0-3_set_all_toxic_label.sh  README.md  add_info2month_toxic_tweets.sh  copy_all_twitter_stream.sh  copy_month_twitter_stream.sh  count_toxic_tweet.sh  count_tweetid.sh  delete_myjobs.sh  filter_all_ja_tweet.sh  filter_month_ja_tweet.sh  get_all_ja_tw_data.sh  get_all_ja_tweet_text.sh  get_all_retweeted_id.sh  get_month_ja_tweet_text.sh  get_toxic_count.sh  new_group_analyze_0-4_count_toxic.sh  pyproject.toml  run.sh  run_all.sh  run_lora_train.sh  run_setfit_train.sh  sample_1000_all_tweets.sh  sample_1percent_ja_all.sh  sample_1percent_ja_month.sh  sample_ja2json_all.sh  sample_ja2json_month.sh  sample_ja_tweet.sh  set_all_toxic_label.sh  set_month_toxic_label.sh  tweet_sampling_all.sh  venv.sh
run_sh_archive/: add_info2all_toxic_tweets.sh  count_tweet_source.sh  get_ja_tw_data.sh  run_month.sh  run_setfit_predict.sh  sample_1000_all_tweets.sh
src/: change2balance_data.py  csv2md_table.py  label_rate_analyze.py  pathes.py  sample.py  utils.py
src/data_analyze/: calc_phrase_toxic_count.py  make_all_tw_len_graph.py  make_media_rate_graph.py  make_monthly_g_rate_graph.py  make_monthly_rate_graph.py  make_new_twlen_rate_graph.py  make_year_graph.py  make_yearly_g_rate_graph.py  pathes.py  ranking_toxic_tweet.py
src/lora_multiclassification/: lora_model_predict.py  lora_model_train.py
src/setfit_fewshot/: setfit_predict.py  setfit_train.py
src/src_archive/: count_toxic_machine.py  count_toxic_media.py  count_toxic_user.py  count_tweet_machine.py  count_tweets_by_twlength.py  count_twlen_yearly.py  filter_ja_tweets.py  make_fir_tox_tw_table.py  make_g_monthly_toxic_twlen_graph.py  new_count_tweets_by_twlength.py  sample_100_tweet.py  sampling_toxic_pos_neg.py
src/toxicity/: analyze_label_name.py
src/twitter_stream/: README.md  add_info2toxic_tweets.py  calc_random_toxic_user_tweets.py  pathes.py  (+17 more)
(+34 files in other folders)
