[project]
name = "otaworkspace"
version = "0.1.0"
description = "ota workspace"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "beautifulsoup4>=4.14.3",
  "bitsandbytes>=0.46.0",
  "datasets>=4.1.1",
  "japanize-matplotlib>=1.1.3",
  "matplotlib>=3.10.7",
  "numpy>=2.2.6",
  "optuna>=4.4.0",
  "packaging>=25.0",
  "peft>=0.17.1",
  "protobuf>=6.32.1",
  "scikit-learn>=1.7.0",
  "sentencepiece>=0.2.1",
  "setfit>=1.1.3",
  "torch>=2.7.0",
  "torchvision>=0.22.0",
  "transformers<=4.51.3",
  "typed-argument-parser>=1.10.1",
  "uv>=0.7.17",
  "xformers>=0.0.30",
]

[[tool.uv.index]]
name = "pytorch-src"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-src" },
]
torchvision = [
  { index = "pytorch-src" },
]
torchaudio = [
  { index = "pytorch-src" },
]
xformers = [
  { index = "pytorch-src" },
]
