[project]
name = "otaworkspace"
version = "0.1.0"
description = "ota workspace"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "accelerate>=1.9.0",
  "bitsandbytes>=0.46.0",
  "datasets>=3.6.0",
  "datetime>=5.5",
  "deepspeed>=0.17.2",
  "evaluate>=0.4.5",
  "numpy>=2.2.6",
  "optuna>=4.4.0",
  "packaging>=25.0",
  "peft>=0.16.0",
  "protobuf>=3.20.3",
  "scikit-learn>=1.7.0",
  "sentence-transformers>=5.0.0",
  "sentencepiece>=0.2.0",
  "setfit>=1.1.2",
  "torch>=2.7.0",
  "torchvision>=0.22.0",
  "transformers<=4.51.3",
  "typed-argument-parser>=1.10.1",
  "unsloth>=2025.6.11",
  "unsloth-zoo>=2025.6.7",
  "uv>=0.7.17",
  "xformers>=0.0.30",
]

[[tool.uv.index]]
name = "pytorch-src"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-src" },
]
torchvision = [
  { index = "pytorch-src" },
]
torchaudio = [
  { index = "pytorch-src" },
]
xformers = [
  { index = "pytorch-src" },
]
